fix: tiles overlapping each other in chess board

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -254,9 +254,10 @@ input[type="number"] {
 }
 
 .tile {
-    width: 100%;
-    height: 100%;
-    border: 2px solid black;
+    /* taking the border into consideration when calculating the tile size */
+    width: calc(100% - 2px);
+    height: calc(100% - 2px);
+    border: 1px solid black;
 }
 
 .tile-light {
@@ -412,5 +413,10 @@ input[type="number"] {
     /* reducing the size of the chess board to allow room for the announcements */
     #chess-board {
         height: calc(100vh - 160px);
+        padding: 0;
+    }
+
+    .tile {
+        border: 1px solid black;
     }
 }
